# SyrinxEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Effects/: CMakeLists.txt
Effects/NormalMap/: CMakeLists.txt  NormalMapEffect.cpp
Effects/Skybox/: CMakeLists.txt
Effects/ToneMapping/: CMakeLists.txt  ToneMappingEffect.cpp
Samples/: CMakeLists.txt
Samples/BindlessTexture/: BindlessTextureSample.cpp  CMakeLists.txt
Samples/CameraMotion/: CMakeLists.txt  CameraController.h  CameraMotionSample.cpp
Samples/CreateWindow/: CMakeLists.txt  CreateWindowSample.cpp
Samples/CubicSpline/: CMakeLists.txt  SampleMain.cpp
Samples/CurveSubdivision/: BezierFitting.h  CMakeLists.txt  ChaikinSubdivision.h  ChaikinSubdivison.h  CubicSplineInterpolation.h  GaussianInterpolation.h  InterpolationSubdivision.h  ParametricCurve.h  PolynomialFitting.h  SampleMain.cpp  SubdivisionMethod.h  UniformCubicSplineSubdivision.h
Samples/DrawTriangle/: CMakeLists.txt  DrawTriangleSample.cpp
Samples/GuiRender/: CMakeLists.txt  GuiRenderSample.cpp  NumericalMethod.h  PolynomialInterpolation.h
Samples/LoadMaterial/: CMakeLists.txt  LoadMaterialSample.cpp
Samples/LoadMesh/: CMakeLists.txt  LoadMeshSample.cpp
Samples/LoadModel/: CMakeLists.txt  LoadModelSample.cpp
Samples/LoadScene/: CMakeLists.txt  LoadSceneSample.cpp
Samples/LoadTexture/: CMakeLists.txt  LoadTextureSample.cpp
Samples/LuaScript/: CMakeLists.txt  LuaScriptSample.cpp  VertexShader.vert  config.lua
Samples/MotionController/: CMakeLists.txt  CubeMotionController.h  MotionControllerSample.cpp
Samples/NormalMap/: CMakeLists.txt  NormalMapSample.cpp
Samples/ParametricCurve/: CMakeLists.txt  ParametricCurve.h  ParametricCurveSample.cpp
Samples/RenderPipeline/: CMakeLists.txt  RenderPipelineSample.cpp
Samples/RenderToTarget/: CMakeLists.txt  RenderToTargetSample.cpp
Samples/SPIRVReflection/: CMakeLists.txt  DefaultVS.glsl  SPIRVReflectionSample.cpp  SyrinxFileIncluder.cpp  SyrinxFileIncluder.h  VertexShader.spv  VertexShader.vert  VertexShaderUnActive.spv  VertexShaderUnActive.vert
Samples/SampleMedias/: .gitattributes
Samples/Skybox/: CMakeLists.txt  SkyboxSample.cpp
Samples/TextureMipMap/: CMakeLists.txt  TextureMipMapSample.cpp
Samples/ToneMapping/: CMakeLists.txt  ToneMappingSample.cpp
Samples/UpdateUniform/: CMakeLists.txt  UpdateUniformSample.cpp
Sources/: CMakeLists.txt
Sources/Core/: CMakeLists.txt
Sources/Editor/: CMakeLists.txt  SyrinxCameraController.h  SyrinxEditor.cpp  SyrinxEditor.h  SyrinxEditorPipeline.cpp  SyrinxEditorPipeline.h  SyrinxLightingPass.h  SyrinxLuaScriptBinding.cpp  SyrinxLuaScriptBinding.h  SyrinxLuaScriptRunner.cpp  SyrinxLuaScriptRunner.h  main.cpp
Sources/GUI/: CMakeLists.txt  SyrinxGui.cpp  SyrinxGui.h
Sources/Graphics/: CMakeLists.txt  SyrinxConstantTranslator.cpp  SyrinxConstantTranslator.h  SyrinxGraphicsEnums.h  SyrinxRenderContext.cpp  SyrinxRenderContext.h  SyrinxRenderState.cpp  SyrinxRenderState.h
Sources/PathTracing/: CMakeLists.txt  Camera.h  GLFWindow.cpp  GLFWindow.h  LaunchParams.h  Model.cpp  SampleRenderer.cpp  SampleRenderer.h  SyrinxAccelerateStructure.cpp  SyrinxAccelerateStructure.h  SyrinxAccelerationStructure.cpp  SyrinxAccelerationStructure.h  SyrinxCudaAssert.h  SyrinxCudaBuffer.cpp  SyrinxCudaBuffer.h  SyrinxCudaResourceManager.cpp  SyrinxCudaResourceManager.h  SyrinxCudaTexture.cpp  SyrinxCudaTexture.h  SyrinxEngine.cpp  SyrinxEngine.h  SyrinxOptixContext.cpp  SyrinxOptixContext.h  SyrinxOptixResourceManager.cpp  SyrinxOptixResourceManager.h  SyrinxOptixSceneBuilder.cpp  SyrinxOptixSceneBuilder.h  SyrinxRadianceAssert.h  devicePrograms.cu  main.cpp  optix7.h
Sources/Pipeline/: CMakeLists.txt  SyrinxCommandSubmitter.cpp  SyrinxCommandSubmitter.h  SyrinxDisplayDevice.cpp  SyrinxDisplayDevice.h  SyrinxEngine.cpp  SyrinxEngine.h  SyrinxEngineSetting.cpp  SyrinxEntityRenderer.cpp  SyrinxEntityRenderer.h  SyrinxRenderPass.cpp  SyrinxRenderPass.h  SyrinxRenderPipeline.cpp  SyrinxRenderPipeline.h  SyrinxRenderState.cpp  SyrinxRenderWindow.cpp  SyrinxScriptableRenderPipeline.cpp  SyrinxScriptableRenderPipeline.h
Sources/RenderPipeline/: CMakeLists.txt  SyrinxCommandSubmitter.cpp  SyrinxCommandSubmitter.h  SyrinxDisplayDevice.cpp  SyrinxDisplayDevice.h  SyrinxEngine.cpp  SyrinxEngine.h  SyrinxEngineSetting.cpp  SyrinxEngineSetting.h  SyrinxRenderPass.cpp  SyrinxRenderPass.h  SyrinxRenderPipeline.cpp  SyrinxRenderPipeline.h  SyrinxRenderState.cpp  SyrinxRenderState.h  SyrinxRenderWindow.cpp  SyrinxRenderWindow.h
Sources/Resource/: CMakeLists.txt  SyrinxResourceSystem.cpp  SyrinxResourceSystem.h
Sources/ResourceSystem/: CMakeLists.txt
Sources/Scene/: CMakeLists.txt  SyrinxEntity.cpp  SyrinxEntity.h  SyrinxScene.cpp  SyrinxScene.h  SyrinxSceneImporter.cpp  SyrinxSceneImporter.h  SyrinxSceneLoader.cpp  SyrinxSceneLoader.h  SyrinxSceneManager.cpp  SyrinxSceneManager.h  SyrinxSceneNode.cpp  SyrinxSceneNode.h
Sources/Script/: CMakeLists.txt  SyrinxBasicTypeBind.h  SyrinxEntityComponentBind.h  SyrinxEntityRendererBind.h  SyrinxFunctionBind.h  SyrinxLuaBinder.cpp  SyrinxLuaBinder.h  SyrinxRenderContextBind.h  SyrinxRenderStateBind.h  SyrinxSceneBind.h
Tools/: CMakeLists.txt
Tools/SyrinxGenPreComputedIBLImages/: CMakeLists.txt  SyrinxGenPreComputedIBLImages.cpp  SyrinxGenPreComputedIBLImages.h  main.cpp
Tools/SyrinxModelExporter/: CMakeLists.txt  SyrinxExporterOptions.h  SyrinxMaterialExporter.cpp  SyrinxMaterialExporter.h  SyrinxMeshExporter.cpp  SyrinxMeshExporter.h  SyrinxModelExporter.cpp  SyrinxModelExporter.h  main.cpp
UnitTest/: CMakeLists.txt  GTestMain.cpp
UnitTest/Core/: AxisAlignedBoxTest.cpp  ColorTest.cpp  FrustumTest.cpp  ImageTest.cpp  PlaneTest.cpp  SingletonTest.cpp  StringTest.cpp  TransformTest.cpp
UnitTest/Graphics/: HardwareBufferTest.cpp  HardwareIndexBufferTest.cpp  HardwareProgramStageTest.cpp  HardwareResourceTest.cpp  HardwareTextureSamplerTest.cpp  HardwareVertexBufferTest.cpp  ProgramPipelineTest.cpp  VertexAttributeDescriptionTest.cpp  VertexDataDescriptionTest.cpp  VertexInputStateTest.cpp
(+798 files in other folders)
