option(BUILD_SHARED_LIBRARY "build shared library for syrinx engine" OFF)


add_subdirectory(Core)
add_subdirectory(Editor)
add_subdirectory(Graphics)
add_subdirectory(GUI)
add_subdirectory(Pipeline)
add_subdirectory(Resource)
add_subdirectory(Scene)
add_subdirectory(Script)
#add_subdirectory(PathTracing)
